[package]
name = "sdla"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
reqwest = { version = "0.11.24", features = ["json"] }
anyhow = "1.0.79"
base64 = "0.21.7"
hmac = "0.12.1"
circular-buffer = "0.1.6"
sha2 = "0.10.8"
hex = "0.4.3"
chrono = "0.4.34"
